Implemented captions for the portfolio items.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <img class="img-circle img-responsive" src="img/profile.png" alt="">
                 <div class="intro-text">
                     <span class="name">Jeroen van der Meulen</span>
                     <span class="skills">Software Engineering Student</span>
@@ -101,7 +100,7 @@
     </div>
 </header>
 <!-- Portfolio Grid Section -->
-<section id="portfolio">
+<section id="portfolio" class="bg-success">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -120,6 +119,10 @@
                     <img src="img/portfolio/actitout/actitoutfootballdynamictheme.gif"
                          class="img-responsive crop img-centered" alt="">
                 </a>
+                <div class="portfolio-caption">
+                    <h4>Act It Out- Dynamic PS4 Theme</h4>
+                    <p class="text-muted">A dynamic theme for Sony's Playstation 4.</p>
+                </div>
             </div>
             <div class="col-sm-4 portfolio-item">
                 <a href="#bluevsred" class="portfolio-link" data-toggle="modal">
@@ -130,6 +133,10 @@
                     </div>
                     <img src="img/portfolio/bvsr/bvsr.png" class="img-responsive crop img-centered" alt="">
                 </a>
+                <div class="portfolio-caption">
+                    <h4>Minor Project - Blue vs Red</h4>
+                    <p class="text-muted">An one lane MOBA made in C#.</p>
+                </div>
             </div>
             <div class="col-sm-4 portfolio-item">
                 <a href="#drawingprogram" class="portfolio-link" data-toggle="modal">
@@ -140,6 +147,10 @@
                     </div>
                     <img src="img/portfolio/drawingapp/drawingapp.png" class="img-responsive crop img-centered" alt="">
                 </a>
+                <div class="portfolio-caption">
+                    <h4>Drawing Program</h4>
+                    <p class="text-muted">A drawing program made in C#.</p>
+                </div>
             </div>
             <div class="col-sm-4 portfolio-item">
                 <a href="#easterpromo" class="portfolio-link" data-toggle="modal">
@@ -150,6 +161,10 @@
                     </div>
                     <img src="img/portfolio/easter/spel.PNG" class="img-responsive crop img-centered" alt="">
                 </a>
+                <div class="portfolio-caption">
+                    <h4>Promotional Easter Game</h4>
+                    <p class="text-muted">A Bejeweld like game made in C#.</p>
+                </div>
             </div>
             <div class="col-sm-4 portfolio-item">
                 <a href="#sintpromo" class="portfolio-link" data-toggle="modal">
@@ -160,6 +175,10 @@
                     </div>
                     <img src="img/portfolio/sint/game.png" class="img-responsive crop img-centered" alt="">
                 </a>
+                <div class="portfolio-caption">
+                    <h4>Promotional Game - Pak je Pakje</h4>
+                    <p class="text-muted">A Zuma like game made in JavaScript.</p>
+                </div>
             </div>
             <div class="col-sm-4 portfolio-item">
                 <a href="#iceskating" class="portfolio-link" data-toggle="modal">
@@ -171,6 +190,10 @@
                     <img src="img/portfolio/iceskating/schaatspuntenmensen.PNG" class="img-responsive crop img-centered"
                          alt="">
                 </a>
+                <div class="portfolio-caption">
+                    <h4>Serious Game - Ice Skating</h4>
+                    <p class="text-muted">Serveral components made in C#.</p>
+                </div>
             </div>
             <div class="col-sm-4 portfolio-item">
                 <a href="#harbour" class="portfolio-link" data-toggle="modal">
@@ -181,6 +204,10 @@
                     </div>
                     <img src="img/portfolio/harbour/harbour1.png" class="img-responsive crop img-centered" alt="">
                 </a>
+                <div class="portfolio-caption">
+                    <h4>Port of Rotterdam Simulation</h4>
+                    <p class="text-muted">A simulation made in Java.</p>
+                </div>
             </div>
             <div class="col-sm-4 portfolio-item">
                 <a href="#sudoku" class="portfolio-link" data-toggle="modal">
@@ -191,6 +218,10 @@
                     </div>
                     <img src="img/portfolio/sudoku/sudokubefore.png" class="img-responsive crop img-centered" alt="">
                 </a>
+                <div class="portfolio-caption">
+                    <h4>Sudoku Solver</h4>
+                    <p class="text-muted">A Sudoku Solver made in C#.</p>
+                </div>
             </div>
             <div class="col-sm-4 portfolio-item">
                 <a href="#lingo" class="portfolio-link" data-toggle="modal">
@@ -201,6 +232,10 @@
                     </div>
                     <img src="img/portfolio/lingo/lingo.png" class="img-responsive crop img-centered" alt="">
                 </a>
+                <div class="portfolio-caption">
+                    <h4>Lingo</h4>
+                    <p class="text-muted">Lingo made in C#.</p>
+                </div>
             </div>
         </div>
     </div>
