Fixed copywrite text and added 16:9 images.

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="img/portfolio/bvsr/bvsr.png" class="img-responsive crop img-centered" alt="">
+                    <img src="img/portfolio/bvsr/bvsr169.png" class="img-responsive crop img-centered" alt="">
                 </a>
                 <div class="portfolio-caption">
                     <h4>Minor Project - Blue vs Red</h4>
@@ -145,7 +145,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="img/portfolio/drawingapp/drawingapp.png" class="img-responsive crop img-centered" alt="">
+                    <img src="img/portfolio/drawingapp/drawingapp169.png" class="img-responsive crop img-centered" alt="">
                 </a>
                 <div class="portfolio-caption">
                     <h4>Drawing Program</h4>
@@ -159,7 +159,7 @@
                             <i class="fa fa-3x fa-search-plus"></i>
                         </div>
                     </div>
-                    <img src="img/portfolio/easter/spel.PNG" class="img-responsive crop img-centered" alt="">
+                    <img src="img/portfolio/easter/spel169.PNG" class="img-responsive crop img-centered" alt="">
                 </a>
                 <div class="portfolio-caption">
                     <h4>Promotional Easter Game</h4>
@@ -173,7 +173,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="img/portfolio/sint/game.png" class="img-responsive crop img-centered" alt="">
+                    <img src="img/portfolio/sint/game169.png" class="img-responsive crop img-centered" alt="">
                 </a>
                 <div class="portfolio-caption">
                     <h4>Promotional Game - Pak je Pakje</h4>
@@ -187,7 +187,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="img/portfolio/iceskating/schaatspuntenmensen.PNG" class="img-responsive crop img-centered"
+                    <img src="img/portfolio/iceskating/schaatspuntenmensen169.PNG" class="img-responsive crop img-centered"
                          alt="">
                 </a>
                 <div class="portfolio-caption">
@@ -202,7 +202,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="img/portfolio/harbour/harbour1.png" class="img-responsive crop img-centered" alt="">
+                    <img src="img/portfolio/harbour/harbour1169.png" class="img-responsive crop img-centered" alt="">
                 </a>
                 <div class="portfolio-caption">
                     <h4>Port of Rotterdam Simulation</h4>
@@ -216,7 +216,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="img/portfolio/sudoku/sudokubefore.png" class="img-responsive crop img-centered" alt="">
+                    <img src="img/portfolio/sudoku/sudokubefore169.png" class="img-responsive crop img-centered" alt="">
                 </a>
                 <div class="portfolio-caption">
                     <h4>Sudoku Solver</h4>
@@ -230,7 +230,7 @@
                             <i class="fa fa-3x fa-search-plus"></i>
                         </div>
                     </div>
-                    <img src="img/portfolio/lingo/lingo.png" class="img-responsive crop img-centered" alt="">
+                    <img src="img/portfolio/lingo/lingo169.png" class="img-responsive crop img-centered" alt="">
                 </a>
                 <div class="portfolio-caption">
                     <h4>Lingo</h4>
@@ -316,7 +316,7 @@
         <br>
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">Copyright © Jeroen van der Meulen 2016</div>
+                <div class="col-lg-12">Copyright © 2016 Jeroen van der Meulen</div>
             </div>
         </div>
     </div>
