--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ sizes) -->
                         </div>
                         <br>
                         <p>Together with a Pixel Artist and Music Composer I've created a dynamic
-                            Playstation 4 Theme for Snap Finger Click, an UK based game studio. My
+                            Playstation 4 Theme for Snap Finger Click, a UK based game studio. My
                             job was to put everything that was delivered to me together into a fully
                             functional dynamic Playstation 4 theme.</p>
                         <ul class="list-inline item-details">
@@ -672,7 +672,7 @@ sizes) -->
                             ​<br>
                             It's a Zuma like puzzle game where the user has to shoot colored presents at a moving line
                             of presents to create matches of three or more of the same color. When the presents reach
-                            the water the user is game over and can send his score and emailadres to a database.</p>
+                            the water the user is game over and can send his score and email address to a database.</p>
                         <ul class="list-inline item-details">
                             <li>Language:
                                 <strong>JavaScript</strong>
