Fixed image link.

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="img/portfolio/iceskating/schaatspuntenmensen169.PNG" class="img-responsive crop img-centered"
+                    <img src="img/portfolio/iceskating/schaatspuntenmensen169.png" class="img-responsive crop img-centered"
                          alt="">
                 </a>
                 <div class="portfolio-caption">
