--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 </a>
                 <div class="portfolio-caption">
                     <h4>Promotional Easter Game</h4>
-                    <p class="text-muted">A Bejeweld like game made in C#.</p>
+                    <p class="text-muted">A Bejeweled like game made in C#.</p>
                 </div>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -428,7 +428,7 @@ sizes) -->
                         </a>
                     </div>
 
-                    <p>During my minor at the NHL Hogeschool I created an one lane MOBA in Unity
+                    <p>During my minor at the NHL Hogeschool I created a one lane MOBA in Unity
                         together with two other students who had never worked with Unity before.
                         The things that I created include:
                     </p>
