Navbar fix and scaling fix.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -45,7 +47,7 @@
                     data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand" href="#page-top">Portfolio</a>
+            <a class="navbar-brand" href="#page-top">Portfolio website</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -81,24 +83,21 @@
                 </div>
             </div>
             <div>
-                <div class="row">
-                    <div class="col-lg-4 col-lg-offset-4 text-center">
-                        <p><br>Hello there!</p>
-                    </div>
+                <div class="col-lg-4 col-lg-offset-4 text-center">
+                    <p><br>Hello there!</p>
                 </div>
-                <div class="row">
-                    <div class="col-lg-4 col-lg-offset-4 text-center">
-                        <p>My name is Jeroen van der Meulen and I'm a Software Engineering student
-                            at the NHL Hogeschool in Leeuwarden, the Netherlands.</p>
-                        <a href="https://www.linkedin.com/in/jeroen-van-der-meulen-107847a1" target="_blank"
-                           class="btn btn-outline fa-4x"><i class="fa fa-fw fa-linkedin"></i></a>
-                    </div>
+                <div class="col-lg-4 col-lg-offset-4 text-center">
+                    <p>My name is Jeroen van der Meulen and I'm a Software Engineering student
+                        at the NHL Hogeschool in Leeuwarden, the Netherlands.</p>
+                    <a href="https://www.linkedin.com/in/jeroen-van-der-meulen-107847a1" target="_blank"
+                       class="btn btn-outline fa-4x"><i class="fa fa-fw fa-linkedin"></i></a>
                 </div>
 
             </div>
         </div>
     </div>
 </header>
+
 <!-- Portfolio Grid Section -->
 <section id="portfolio" class="bg-success">
     <div class="container">
@@ -145,7 +144,8 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="img/portfolio/drawingapp/drawingapp169.png" class="img-responsive crop img-centered" alt="">
+                    <img src="img/portfolio/drawingapp/drawingapp169.png" class="img-responsive crop img-centered"
+                         alt="">
                 </a>
                 <div class="portfolio-caption">
                     <h4>Drawing Program</h4>
@@ -187,7 +187,8 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="img/portfolio/iceskating/schaatspuntenmensen169.png" class="img-responsive crop img-centered"
+                    <img src="img/portfolio/iceskating/schaatspuntenmensen169.png"
+                         class="img-responsive crop img-centered"
                          alt="">
                 </a>
                 <div class="portfolio-caption">
@@ -240,7 +241,8 @@
         </div>
     </div>
 </section>
-<!-- About Section -->
+
+<!-- Experience Section -->
 <section class="success" id="experience">
     <div class="container">
         <div class="row">
@@ -320,11 +322,10 @@
             </div>
         </div>
     </div>
-
 </footer>
 
-<!-- Scroll to Top Button (Only visible on small and extra-small screen
-sizes) -->
+
+<!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
 <div class="scroll-top page-scroll hidden-sm hidden-xs hidden-lg hidden-md">
     <a class="btn btn-primary" href="#page-top">
         <i class="fa fa-chevron-up"></i>
@@ -973,15 +974,18 @@ sizes) -->
         </div>
     </div>
 </div>
+
 <!-- jQuery -->
-<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/jquery/jquery.js"></script>
+
 <!-- Bootstrap Core JavaScript -->
 <script src="vendor/bootstrap/js/bootstrap.js"></script>
+
 <!-- Plugin JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+
 <!-- Theme JavaScript -->
 <script src="js/freelancer.js"></script>
-
 
 </body>
 
