Added alternate text to images.

--- a/index.html
+++ b/index.html
@@ -402,19 +402,19 @@
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner" role="listbox">
                             <div class="item active">
-                                <img src="img/portfolio/bvsr/bvsr.png" class="img-centered crop-carousel"/>
+                                <img src="img/portfolio/bvsr/bvsr.png" class="img-centered crop-carousel" alt=""/>
                             </div>
 
                             <div class="item">
-                                <img src="img/portfolio/bvsr/arena.PNG" class="img-centered crop-carousel"/>
+                                <img src="img/portfolio/bvsr/arena.PNG" class="img-centered crop-carousel" alt=""/>
                             </div>
 
                             <div class="item">
-                                <img src="img/portfolio/bvsr/bomb.PNG" class="img-centered crop-carousel"/>
+                                <img src="img/portfolio/bvsr/bomb.PNG" class="img-centered crop-carousel" alt=""/>
                             </div>
 
                             <div class="item">
-                                <img src="img/portfolio/bvsr/trees.PNG" class="img-centered crop-carousel"/>
+                                <img src="img/portfolio/bvsr/trees.PNG" class="img-centered crop-carousel" alt=""/>
                             </div>
                         </div>
 
@@ -546,23 +546,23 @@
                             <!-- Wrapper for slides -->
                             <div class="carousel-inner" role="listbox">
                                 <div class="item active">
-                                    <img src="img/portfolio/easter/menu.PNG" class="img-centered crop-carousel"/>
+                                    <img src="img/portfolio/easter/menu.PNG" class="img-centered crop-carousel" alt=""/>
                                 </div>
 
                                 <div class="item">
-                                    <img src="img/portfolio/easter/spel.PNG" class="img-centered crop-carousel"/>
+                                    <img src="img/portfolio/easter/spel.PNG" class="img-centered crop-carousel" alt=""/>
                                 </div>
 
                                 <div class="item">
-                                    <img src="img/portfolio/easter/pauze.PNG" class="img-centered crop-carousel"/>
+                                    <img src="img/portfolio/easter/pauze.PNG" class="img-centered crop-carousel" alt=""/>
                                 </div>
 
                                 <div class="item">
-                                    <img src="img/portfolio/easter/uitlegmenu.PNG" class="img-centered crop-carousel"/>
+                                    <img src="img/portfolio/easter/uitlegmenu.PNG" class="img-centered crop-carousel" alt=""/>
                                 </div>
 
                                 <div class="item">
-                                    <img src="img/portfolio/easter/gameover.PNG" class="img-centered crop-carousel"/>
+                                    <img src="img/portfolio/easter/gameover.PNG" class="img-centered crop-carousel" alt=""/>
                                 </div>
                             </div>
 
@@ -633,23 +633,23 @@
                             <!-- Wrapper for slides -->
                             <div class="carousel-inner" role="listbox">
                                 <div class="item active">
-                                    <img src="img/portfolio/sint/Menu.PNG" class="img-centered crop-carousel"/>
+                                    <img src="img/portfolio/sint/Menu.PNG" class="img-centered crop-carousel" alt=""/>
                                 </div>
 
                                 <div class="item">
-                                    <img src="img/portfolio/sint/Uitleg.PNG" class="img-centered crop-carousel"/>
+                                    <img src="img/portfolio/sint/Uitleg.PNG" class="img-centered crop-carousel" alt=""/>
                                 </div>
 
                                 <div class="item">
-                                    <img src="img/portfolio/sint/game.png" class="img-centered crop-carousel"/>
+                                    <img src="img/portfolio/sint/game.png" class="img-centered crop-carousel" alt=""/>
                                 </div>
 
                                 <div class="item">
-                                    <img src="img/portfolio/sint/Pauze.PNG" class="img-centered crop-carousel"/>
+                                    <img src="img/portfolio/sint/Pauze.PNG" class="img-centered crop-carousel" alt=""/>
                                 </div>
 
                                 <div class="item">
-                                    <img src="img/portfolio/sint/gameover.PNG" class="img-centered crop-carousel"/>
+                                    <img src="img/portfolio/sint/gameover.PNG" class="img-centered crop-carousel" alt=""/>
                                 </div>
                             </div>
 
@@ -722,17 +722,17 @@
                             <!-- Wrapper for slides -->
                             <div class="carousel-inner" role="listbox">
                                 <div class="item active">
-                                    <img src="img/portfolio/iceskating/updater.png" class="img-centered crop-carousel"/>
+                                    <img src="img/portfolio/iceskating/updater.png" class="img-centered crop-carousel" alt=""/>
                                 </div>
 
                                 <div class="item">
                                     <img src="img/portfolio/iceskating/schaatspunten.PNG"
-                                         class="img-centered crop-carousel"/>
+                                         class="img-centered crop-carousel" alt=""/>
                                 </div>
 
                                 <div class="item">
                                     <img src="img/portfolio/iceskating/schaatspuntenmensen.PNG"
-                                         class="img-centered crop-carousel"/>
+                                         class="img-centered crop-carousel" alt=""/>
                                 </div>
                             </div>
 
@@ -804,19 +804,19 @@
                             <!-- Wrapper for slides -->
                             <div class="carousel-inner" role="listbox">
                                 <div class="item active">
-                                    <img src="img/portfolio/harbour/harbour1.png" class="img-centered crop-carousel"/>
+                                    <img src="img/portfolio/harbour/harbour1.png" class="img-centered crop-carousel" alt=""/>
                                 </div>
 
                                 <div class="item">
-                                    <img src="img/portfolio/harbour/harbour2.png" class="img-centered crop-carousel"/>
+                                    <img src="img/portfolio/harbour/harbour2.png" class="img-centered crop-carousel" alt=""/>
                                 </div>
 
                                 <div class="item">
-                                    <img src="img/portfolio/harbour/harbour3.png" class="img-centered crop-carousel"/>
+                                    <img src="img/portfolio/harbour/harbour3.png" class="img-centered crop-carousel" alt=""/>
                                 </div>
 
                                 <div class="item">
-                                    <img src="img/portfolio/harbour/harbour4.png" class="img-centered crop-carousel"/>
+                                    <img src="img/portfolio/harbour/harbour4.png" class="img-centered crop-carousel" alt=""/>
                                 </div>
                             </div>
 
@@ -890,11 +890,11 @@
                             <div class="carousel-inner" role="listbox">
                                 <div class="item active">
                                     <img src="img/portfolio/sudoku/sudokubefore.png"
-                                         class="img-centered crop-carousel"/>
+                                         class="img-centered crop-carousel" alt=""/>
                                 </div>
 
                                 <div class="item">
-                                    <img src="img/portfolio/sudoku/sudokuafter.png" class="img-centered crop-carousel"/>
+                                    <img src="img/portfolio/sudoku/sudokuafter.png" class="img-centered crop-carousel" alt=""/>
                                 </div>
                             </div>
 
