--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </a>
                 <div class="portfolio-caption">
                     <h4>Minor Project - Blue vs Red</h4>
-                    <p class="text-muted">An one lane MOBA made in C#.</p>
+                    <p class="text-muted">A one lane MOBA made in C#.</p>
                 </div>
             </div>
             <div class="col-sm-4 portfolio-item">
