Fixed spelling mistake.

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 </a>
                 <div class="portfolio-caption">
                     <h4>Serious Game - Ice Skating</h4>
-                    <p class="text-muted">Serveral components made in C#.</p>
+                    <p class="text-muted">Several components made in C#.</p>
                 </div>
             </div>
             <div class="col-sm-4 portfolio-item">
