--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="col-lg-12">
                 <div class="intro-text">
                     <span class="name">Jeroen van der Meulen</span>
-                    <span class="skills">Software Engineering Student</span>
+                    <span class="skills">Junior Programmer</span>
                 </div>
             </div>
             <div>
@@ -87,8 +87,8 @@
                     <p><br>Hello there!</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-4 text-center">
-                    <p>My name is Jeroen van der Meulen and I'm a Software Engineering student
-                        at the NHL Hogeschool in Leeuwarden, the Netherlands.</p>
+                    <p>My name is Jeroen van der Meulen and I just finished my Software Engineering study at the
+                        NHL Hogeschool in Leeuwarden, the Netherlands. And I'm currently working as a Junior Programmer at Triangle Studios.</p>
                     <a href="https://www.linkedin.com/in/jeroen-van-der-meulen-107847a1" target="_blank"
                        class="btn btn-outline fa-4x"><i class="fa fa-fw fa-linkedin"></i></a>
                 </div>
