Added three more items.

--- a/index.html
+++ b/index.html
@@ -101,13 +101,54 @@
 <!-- Portfolio Grid Section -->
 <section id="portfolio" class="bg-success">
     <div class="container">
+        <h2 class="text-center text-uppercase text-secondary mb-0">Portfolio</h2>
+		<br>
         <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2>Portfolio</h2>
-                <br>
+		<div class="col-sm-4 portfolio-item">
+                <a href="#clustertumble" class="portfolio-link" data-toggle="modal">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <i class="fa fa-search-plus fa-3x"></i>
+                        </div>
+                    </div>
+                    <img src="img/portfolio/clustertumble/clustertumble.png"
+                         class="img-responsive crop img-centered" alt="">
+                </a>
+                <div class="portfolio-caption">
+                    <h4>Cluster Tumble</h4>
+                    <p class="text-muted">A puzzle game for Playstation 4.</p>
+                </div>
             </div>
-        </div>
-        <div class="row">
+		<div class="col-sm-4 portfolio-item">
+                <a href="#realfarmdlc" class="portfolio-link" data-toggle="modal">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <i class="fa fa-search-plus fa-3x"></i>
+                        </div>
+                    </div>
+                    <img src="img/portfolio/realfarm/realfarmdlc.jpg"
+                         class="img-responsive crop img-centered" alt="">
+                </a>
+                <div class="portfolio-caption">
+                    <h4>Real Farm - Grünes Tal and Potato Pack DLC</h4>
+                    <p class="text-muted">Real Farm DLC for PC, Xbox One and Playstation 4.</p>
+                </div>
+            </div>
+		<div class="col-sm-4 portfolio-item">
+                <a href="#realfarm" class="portfolio-link" data-toggle="modal">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <i class="fa fa-search-plus fa-3x"></i>
+                        </div>
+                    </div>
+                    <img src="img/portfolio/realfarm/realfarm.jpg"
+                         class="img-responsive crop img-centered" alt="">
+                </a>
+                <div class="portfolio-caption">
+                    <h4>Real Farm</h4>
+                    <p class="text-muted">Farming Simulation for PC, Xbox One and Playstation 4.</p>
+                </div>
+            </div>
             <div class="col-sm-4 portfolio-item">
                 <a href="#actitoutps4theme" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
@@ -119,7 +160,7 @@
                          class="img-responsive crop img-centered" alt="">
                 </a>
                 <div class="portfolio-caption">
-                    <h4>Act It Out- Dynamic PS4 Theme</h4>
+                    <h4>Act It Out - Dynamic PS4 Theme</h4>
                     <p class="text-muted">A dynamic theme for Sony's Playstation 4.</p>
                 </div>
             </div>
@@ -149,7 +190,7 @@
                 </a>
                 <div class="portfolio-caption">
                     <h4>Drawing Program</h4>
-                    <p class="text-muted">A drawing program made in C#.</p>
+                    <p class="text-muted">A drawing program using multiple design patterns made in C#.</p>
                 </div>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -318,7 +359,7 @@
         <br>
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">Copyright © 2016 - 2018 Jeroen van der Meulen</div>
+                <div class="col-lg-12">Copyright © 2018 Jeroen van der Meulen</div>
             </div>
         </div>
     </div>
@@ -333,6 +374,131 @@
 </div>
 
 <!-- Portfolio Modals -->
+<div class="portfolio-modal modal fade" id="clustertumble" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-content">
+        <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+                <div class="rl"></div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div class="modal-body">
+                        <h2>Cluster Tumble</h2>
+                        <br>
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item"
+                                    src="https://www.youtube.com/embed/roFYcNGjf54?rel=0"></iframe>
+                        </div>
+                        <br>
+                        <p>DESCRIPTION COMMING SOON...</p>
+                        <ul class="list-inline item-details">
+                            <li>Language:
+                                <strong>C#</strong>
+                            </li>
+                            <li>Download:
+                                <strong>
+                                    <a href="https://store.playstation.com/nl-nl/product/EP4675-CUSA10858_00-CLUSTERTUMBLE0EU"
+                                       target="_blank">Playstation Store</a>
+                                </strong>
+                            </li>
+                        </ul>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">
+                            <i class="fa fa-times"></i>Close
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="portfolio-modal modal fade" id="realfarmdlc" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-content">
+        <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+                <div class="rl"></div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div class="modal-body">
+                        <h2>Real Farm DLC</h2>
+                        <br>
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item"
+                                    src="https://www.youtube.com/embed/4pD-P3aaK9o?rel=0"></iframe>
+                        </div>
+                        <br>
+                        <p>DESCRIPTION COMMING SOON...</p>
+                        <ul class="list-inline item-details">
+                            <li>Language:
+                                <strong>C#</strong>
+                            </li>
+                            <li>Download:
+                                <strong>
+                                    <a href="https://store.playstation.com/nl-nl/grid/search-game/1?gameContentType=addons&query=real%20farm"
+                                       target="_blank">Playstation Store</a>
+                                </strong>
+                            </li>
+                        </ul>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">
+                            <i class="fa fa-times"></i>Close
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="portfolio-modal modal fade" id="realfarm" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-content">
+        <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+                <div class="rl"></div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div class="modal-body">
+                        <h2>Real Farm</h2>
+                        <br>
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item"
+                                    src="https://www.youtube.com/embed/CEKyPMXbKyQ?rel=0"></iframe>
+                        </div>
+                        <br>
+                        <p>DESCRIPTION COMMING SOON...</p>
+                        <ul class="list-inline item-details">
+                            <li>Language:
+                                <strong>C#</strong>
+                            </li>
+                            <li>Download:
+                                <strong>
+                                    <a href="https://store.playstation.com/nl-nl/product/EP4541-CUSA07966_00-REALFARMEU000000"
+                                       target="_blank">Playstation Store,</a>
+                                </strong>
+								<strong>
+                                    <a href="https://www.microsoft.com/nl-nl/p/real-farm/btqkshjsrp40"
+                                       target="_blank">Xbox,</a>
+                                </strong>
+								<strong>
+                                    <a href="https://store.steampowered.com/app/573680/Real_Farm/"
+                                       target="_blank">Steam</a>
+                                </strong>
+                            </li>
+                        </ul>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">
+                            <i class="fa fa-times"></i>Close
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="portfolio-modal modal fade" id="actitoutps4theme" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-content">
         <div class="close-modal" data-dismiss="modal">
@@ -348,7 +514,7 @@
                         <br>
                         <div class="embed-responsive embed-responsive-16by9">
                             <iframe class="embed-responsive-item"
-                                    src="https://www.youtube.com/embed/FIP0YSPgP90"></iframe>
+                                    src="https://www.youtube.com/embed/FIP0YSPgP90?rel=0"></iframe>
                         </div>
                         <br>
                         <p>Together with a Pixel Artist and Music Composer I've created a dynamic
@@ -832,7 +998,7 @@
                         </div>
                         <br>
 
-                        <p>For a project during my second year at the NHL Hogeschool we had to create a simulation of
+                        <p>For a project during my second year at the NHL Hogeschool we created a simulation of
                             the port of Rotterdam, together with five other students.
                             The project consisted of a 3D simulation and a server that would send XML data to the
                             simulator.
